# pong

./: .clangd  CMakeLists.txt
.cache/clangd/index/: Ball.h.01324DD2F978CEDF.idx  ControlScheme.h.B83ED86C7D3618CD.idx  Game.cpp.C6B7A8779E5F4D1C.idx  Game.h.91F5948FCE6A08CF.idx  Player.h.8B12C836FFBBF3E1.idx  ball.cpp.BD8EB9B938EF6B92.idx  main.cpp.477BC716560280A9.idx  player.cpp.2FCF588F6993549A.idx  pong.cpp.67CAB53810995D93.idx
src/: Ball.h  ControlScheme.h  Game.h  Player.h  ball.cpp  main.cpp  player.cpp  pong.cpp
